rename line to product
