# internal/handler/product.go
@@ -2,17 +2,17 @@ package handler
 
 import "github.com/gin-gonic/gin"
 
-// AddLine godoc
+// AddProduct godoc
 // @Summary Добавить новый товар
 // @Description Создает новую запись товара в системе (независимо от заказов)
-// @Tags lines
+// @Tags products
 // @Accept json
 // @Produce json
-// @Param input body dto.LineRequestDto true "Данные товара"
-// @Success 200 {object} dto.LineRequestDto
+// @Param input body dto.ProductRequestDto true "Данные товара"
+// @Success 200 {object} dto.ProductRequestDto
 // @Failure 400
 // @Failure 500
-// @Router /lines [post]
-func (h *Handler) AddLine(e *gin.Context) {
+// @Router /products [post]
+func (h *Handler) AddProduct(e *gin.Context) {
 
 }
